<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainView"

    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="260dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/imageView" />

    <TextView
        android:id="@+id/longitude"
        android:text="longitude: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTimestamp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp" />

    <TextView
        android:id="@+id/tvLongitude"
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTimestamp"
        android:layout_toRightOf="@id/longitude"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp" />

    <TextView
        android:id="@+id/latitude"
        android:text="latitude: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTimestamp"
        android:layout_toRightOf="@id/tvLongitude"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp" />

    <TextView
        android:id="@+id/tvLatitude"
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTimestamp"
        android:layout_toRightOf="@id/latitude"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp" />

    <EditText
        android:id="@+id/etCaption"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/longitude"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/snapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCaption"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="Capture" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCaption"
        android:layout_alignStart="@id/etCaption"
        android:layout_marginTop="20dp"
        android:text="prev" />

    <Button
        android:id="@+id/btnNext"
        android:text="next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCaption"
        android:layout_alignEnd="@id/etCaption"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnSearch"
        android:text="search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPrev"
        android:layout_margin="20dp" />

    <Button
        android:id="@+id/share"
        android:text="Share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/snapButton"
        android:layout_toRightOf="@id/btnSearch"
        android:layout_marginVertical="20dp" />
</RelativeLayout>